default/objects/Incentive__c/fields/Incentive_Status__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Status__c</fullName>
    <formula>If( Ineligible__c = True,&quot;Ineligible&quot;, IF( Paid_Amount__c =  Amount__c , &quot;Paid In Full&quot;, IF(Paid_Amount__c &gt; 0, &quot;Partial Payment&quot;, &quot;New&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incentive Status</label>
    <type>Text</type>
</CustomField>