default/objects/Incentive__c/fields/Ineligible__c.field-meta.xml
<CustomField>
    <fullName>Ineligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ineligible</label>
    <type>Checkbox</type>
</CustomField>