default/objects/Incentive__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Payee__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Amount__c</columns>
    <columns>Date__c</columns>
    <columns>Incentive_Status__c</columns>
    <columns>Paid_Amount__c</columns>
    <columns>Last_Payment_Date__c</columns>
    <columns>Next_Payment_Due__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>