default/objects/Incentive__c/listViews/All_My_Incentives.listView-meta.xml
<ListView>
    <fullName>All_My_Incentives</fullName>
    <columns>NAME</columns>
    <columns>Payee__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Amount__c</columns>
    <columns>Date__c</columns>
    <columns>Incentive_Status__c</columns>
    <columns>Paid_Amount__c</columns>
    <columns>Last_Payment_Date__c</columns>
    <columns>Next_Payment_Due__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Employee__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All My Incentives</label>
</ListView>