default/objects/Incentive__c/listViews/Paid_In_Full_Incentives.listView-meta.xml
<ListView>
    <fullName>Paid_In_Full_Incentives</fullName>
    <columns>NAME</columns>
    <columns>Payee__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Amount__c</columns>
    <columns>Date__c</columns>
    <columns>Incentive_Status__c</columns>
    <columns>Paid_Amount__c</columns>
    <columns>Last_Payment_Date__c</columns>
    <columns>Next_Payment_Due__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Incentive_Status__c</field>
        <operation>equals</operation>
        <value>Paid In Full</value>
    </filters>
    <label>Paid In Full Incentives</label>
</ListView>