default/objects/Incentive__c/listViews/Partial_Payment_Incentives.listView-meta.xml
<ListView>
    <fullName>Partial_Payment_Incentives</fullName>
    <columns>NAME</columns>
    <columns>Payee__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Amount__c</columns>
    <columns>Date__c</columns>
    <columns>Incentive_Status__c</columns>
    <columns>Paid_Amount__c</columns>
    <columns>Balance_Due__c</columns>
    <columns>Last_Payment_Date__c</columns>
    <columns>Next_Payment_Due__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Incentive_Status__c</field>
        <operation>equals</operation>
        <value>Partial Payment</value>
    </filters>
    <label>Partial Payment Incentives</label>
</ListView>